# dr-skin-api

./: .gitignore  database.py  dependencies.py  drskin.db  main.py  pyproject.toml  requirements.txt  schemas.py
admin/: models.py  schemas.py
auth/: models.py  queries.py  routes.py  schemas.py  security.py  transactions.py
dashboard/: models.py  queries.py  routes.py  schemas.py  transactions.py
diagnosis/: routes.py  services.py
scripts/: activate_specialist_by_id.py  add_license_file_path_column.py  approve_specialist.py  create_admin.py  fix_admin_status.py
specialists/: __init__.py  models.py  queries.py  routes.py  schemas.py  transactions.py
