[project]
name = "dr-skin-api"
version = "0.1.0"
description = "Dr. Skin API - A FastAPI backend for skin specialist management"
requires-python = ">=3.7"
dependencies = [
    "fastapi>=0.68.0,<0.69.0",
    "uvicorn>=0.15.0,<0.16.0",
    "sqlalchemy>=1.4.0,<1.5.0",
    "aiosqlite>=0.17.0,<0.18.0",
    "python-jose[cryptography]>=3.3.0,<3.4.0",
    "passlib[bcrypt]>=1.7.4,<1.8.0",
    "python-multipart>=0.0.5,<0.0.6",
    "email-validator>=1.1.3,<1.2.0",
    "pydantic>=1.8.0,<1.9.0",
    "python-dotenv>=0.19.0,<0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
] 